--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
 
     //okHTTP
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.3"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
 
     // Agrega las dependencias de Paging 3
     implementation "androidx.paging:paging-runtime:3.2.1" // Utiliza la última versión de Paging 3
