--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,13 +65,17 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.9.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.2.0-alpha04'
+    implementation 'androidx.compose.material3:material3:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Material
+    implementation "androidx.compose.material:material:1.6.8"
+
 
     // VIEW MODEL
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_version"
@@ -95,8 +99,11 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$navigation_version"
 
     // ROOM
+    implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-paging:$room_version"
+
 
     // RETROFIT
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
