REFACTOR - Game and game details
- Se refactorizaron los composables para games y game details screens, separando en mini componentes cada apatarado de las pantallas.

- Se cambió el color y animación para el snackbar de game screen.

- Se renombraron composables a unos más entendibles.

- Se implementó la lógica para cambiar el tema claro/oscuro en el perfil, creando el modal bottom sheet y guardando la selección del tema en data store.

- Se implementó la lógica para guardar y obtener el tema preferido del usuario en data store.

- Se separaron los mappers de los modelos de game details a archivos separados.

- Se cambiaron colores del floating action button de game screen y el pull refresh

- Se modificó la lógica para obtener qué tema se tiene en el dispositivo así como también para setear ese valor al archivo de Theme y pueda elegir el claro u oscuro.

- Se agregaron animaciones a los elementos de game screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,4 +143,7 @@ dependencies {
 
     // KOTLIN DATETIME
     implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.6.0"
+
+    // Extended icons
+    implementation "androidx.compose.material:material-icons-extended-android:1.7.1"
 }
