--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+    implementation "androidx.appcompat:appcompat:1.6.1"
+
     // Material
     implementation "androidx.compose.material:material:1.6.8"
 
@@ -146,4 +148,10 @@ dependencies {
 
     // Extended icons
     implementation "androidx.compose.material:material-icons-extended-android:1.7.1"
+
+    // BIOMETRICS
+    //implementation "androidx.biometric:biometric:1.1.0"
+    implementation("androidx.biometric:biometric:1.2.0-alpha05")
+
+    //implementation "androidx.biometric:biometric-ktx:1.4.0-alpha02"
 }
