--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,8 +150,8 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended-android:1.7.1"
 
     // BIOMETRICS
-    //implementation "androidx.biometric:biometric:1.1.0"
     implementation("androidx.biometric:biometric:1.2.0-alpha05")
 
-    //implementation "androidx.biometric:biometric-ktx:1.4.0-alpha02"
+    // SPLASH
+    implementation "androidx.core:core-splashscreen:1.0.1"
 }
